Prevent sample titles from spilling out of their container

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -96,6 +96,15 @@ p {
     word-wrap: break-word;
 }
 
+.home-sample div {
+    display: block; /* Ensures it takes up its own line */
+    width: 100%; /* Ensures it doesn't exceed its container */
+    white-space: nowrap; /* Prevents wrapping to a new line */
+    overflow: hidden; /* Hides overflowing text */
+    text-overflow: ellipsis; /* Adds the ellipsis when text overflows */
+
+}
+
 .home-sample {
 
 }
